# mujoco_ros

./: .gitignore  CMakeLists.txt  README.md  ignore_ros_pkgs.sh  init_ignore.bash
control/: CMakeLists.txt  package.xml
control/launch/: ackermann_pose_control.launch  mushr_control.launch
control/scripts/: feedback_experiments.py
control/src/: mushr_trajopt_ctrl.cpp
control/src/nodelets/: ackermann_feedback_pose_control.cpp  determine_carrot.cpp  mushr_feedback_controller.cpp  mushr_pure_pursuit.cpp  mushr_stanley.cpp  nodelets.xml
control/srv/: MushrControlPropagation.srv
estimation/: CMakeLists.txt  package.xml
estimation/cfg/: MushrEstimator.cfg
estimation/config/: cTw_cam0.yaml  camera_robb.yaml  lab_2x3_markers_positions.yaml  mujoco_cam.yaml
estimation/launch/: mj_estimation.launch  nodelets_as_nodes.launch  rosbag_replay.launch  trajectory_estimation.launch
estimation/src/: aruco_estimation.cpp  mushr_trajopt_ctrl.cpp  mushr_tunning.cpp  nodelets_as_nodes.cpp  trajectory_estimation_from_tf.cpp
estimation/src/nodelets/: nodelets.xml  (+4 more)
estimation/srv/: StateEstimation.srv  TrajectoryEstimation.srv
infrastructure/: README.md
infrastructure/interface/: CMakeLists.txt  package.xml
infrastructure/ml4kp_bridge/: CMakeLists.txt  README.md  package.xml
infrastructure/ml4kp_bridge/include/: ml4kp_defs.h
infrastructure/ml4kp_bridge/include/ml4kp_bridge/: defs.h  fg_ltv_sde.hpp  lie_ode_observation.hpp  ltv_sde_factors.hpp  msgs_utils.hpp  param_loader_bridge.hpp  plan_bridge.hpp  plan_step_bridge.hpp  plan_stepper.hpp  space_bridge.hpp  template_utils.hpp  trajectory_bridge.hpp
infrastructure/ml4kp_bridge/launch/: plan_from_file.launch
infrastructure/ml4kp_bridge/msg/: Plan.msg  PlanStamped.msg  PlanStep.msg  PlanStepStamped.msg  PlannerGoal.msg  SpacePoint.msg  SpacePointStamped.msg  Trajectory.msg  TrajectoryStamped.msg
infrastructure/ml4kp_bridge/src/: dirt_service.cpp
infrastructure/ml4kp_bridge/src/nodelets/: nodelets.xml  plan_from_file_publisher.cpp  plan_stepper.cpp
infrastructure/ml4kp_bridge/srv/: MushrPlanner.srv  SendString.srv
infrastructure/ml4kp_bridge/tests/: defs.cpp  ml4kp_constants.cpp  msgs_bridge.cpp  msgs_utils.cpp  system_factory.cpp
infrastructure/prx_models/: CMakeLists.txt  package.xml
infrastructure/utils/: CMakeLists.txt  package.xml
mj_models/: CMakeLists.txt  package.xml
ml4kp_bridge/: README.md
motion_planning/: CMakeLists.txt  README.md  package.xml
motion_planning/action/: StelaGraphTraversal.action
motion_planning/config/: aorrt.yaml  dirt.yaml  ltv_sde.yaml  mushr.yaml  rrt.yaml  stela.yaml
motion_planning/include/: planner_client.hpp  planner_service.hpp
motion_planning/include/motion_planning/: branch_selector.hpp  control_viz_publisher.hpp  fg_mushr.hpp  local_adaptation.hpp  ltv_controller.hpp  motion_planning_tree.hpp  motion_planning_types.hpp  planner_client.hpp  planner_postprocessing.hpp  planner_service.hpp  planner_setup.hpp  random_branch.hpp  replanner_service.hpp  sbmp_graph_publisher.hpp  sbmp_publisher.hpp  scate.hpp  single_shot_planner_service.hpp  steap.hpp  stela.hpp  stela_stepper.hpp  trajectory_estimation.hpp  tree_bridge.hpp  tree_interface.hpp  tree_to_trajectories.hpp  tree_viz_publisher.hpp
motion_planning/include/motion_planning/iox/: gnn.hpp  gnn_iox_utils.hpp  metrics.hpp  topic_data.hpp
motion_planning/launch/: sbmp_fg.launch  steap.launch  stela.launch
motion_planning/msg/: PlanningResult.msg
motion_planning/src/: gnn_query_service.cpp  iox_publisher.cpp  iox_subscriber.cpp  mp_nodelet_debugging.cpp  mushr_planning.cpp  positive_factor.hpp  tree_manager.cpp
motion_planning/src/nodelets/: nodelets.cpp  nodelets.xml
motion_planning/srv/: MushrPlanner.srv
motion_planning/tests/: test_gnn.cpp
mujoco/: CMakeLists.txt  package.xml
mujoco/launch/: mushr.launch  mushr_open_loop.launch
mujoco/models/: buddy.xml  mushr.xml
mujoco/msg/: MushrControl.msg
mujoco/scripts/: mushr_open_loop_publisher.py
mujoco/src/: mushr_control_listener.cpp
mujoco_ros/: CMakeLists.txt  package.xml
mujoco_ros/data/: mushr_plan.txt
mujoco_ros/executables/: mushr_visualize.cpp
mujoco_ros/include/mujoco_ros/: control_listener.hpp  defs.h  feedback_service.hpp  simulator.hpp
mujoco_ros/launch/: mushr.launch  mushr_feedback_example.launch  mushr_open_loop.launch  mushr_visualize.launch
mujoco_ros/scripts/: keyboard_service.py  mushr_open_loop_publisher.py
mujoco_ros/src/: mushr_control_listener.cpp  mushr_feedback.cpp  mushr_visualize.cpp
task_planning/: CMakeLists.txt  README.md  package.xml
task_planning/include/: utils.hpp
task_planning/launch/: obstacles_to_ml4kp.launch  replanning.launch  single_shot.launch
task_planning/scripts/: mushr_bag_file.py  run_replanning_experiments.py  run_singleshot_experiments.py  yaml_to_xml.py
task_planning/src/: mushr_open_loop_planning.cpp  mushr_replanning.cpp  mushr_replanning_dirt.cpp  mushr_replanning_rogue.cpp  mushr_single_shot_dirt.cpp  mushr_single_shot_rogue.cpp  obstacles_to_ml4kp_world.cpp  stela_open_loop.cpp
world/: README.md
world/analytical/: CMakeLists.txt  package.xml
world/analytical/config/: LTV_CSBRM.yaml  fg_ltv_sde.yaml
world/analytical/include/: simulator.hpp
world/analytical/include/analytical/: fg_ltv_sde.hpp  ltv_sde.hpp  simulator.hpp
world/analytical/launch/: simplified_tensegrity.launch  simulator.launch
world/analytical/src/: analytical_simulator.cpp  simplified_tensegrity.cpp  simulator.cpp  tensegrity_fg.cpp
world/mujoco_ros/: CMakeLists.txt  package.xml
world/perception/: CMakeLists.txt  package.xml
world/perception/config/: aruco_detection.yaml  hd_webcam_c615.yaml  logitech_brio.yaml  logitech_brio_desktop07.yaml  logitech_brio_robb.yaml  macos_cam.yaml  microsoft_lifecam_cinema.yaml
world/perception/launch/: aruco_detection.launch  camera_calibration.launch  camera_publisher.launch
world/perception/nodelets/: physical_camera.xml
world/perception/scripts/: camera_calibration.py
world/perception/src/nodelets/: aruco_detection.cpp  physical_camera.cpp
(+164 files in other folders)
