<?xml version="1.0"?>
<!-- <package> -->
<package format="2">

  <name>analytical</name>
  <version>0.1.0</version>
  <description>The analytical world (sim) package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="gary.granados@gmail.com">Gary</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

    
    <depend>message_runtime</depend>
    <depend>class_loader</depend>

    <exec_depend>std_msgs</exec_depend>

    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>geometry_msgs</build_depend>
    <build_depend>interface</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>pluginlib</build_depend> 
    <build_depend>roscpp</build_depend> 
    <build_depend>roslib</build_depend> 
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>interface</exec_depend>
    <exec_depend>nodelet</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>roslib</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <export>
      <!-- <nodelet plugin="${prefix}/nodelets/physical_camera.xml"/> -->
    </export>

</package>
